fix: fix-pack; - added padding-top for .content - added z-index to dropdown-menu - fixed dropdown-buttons hover - fixed bug with non-active click on dropdown menu and language menu - removed transitions from some header elements - make icons smaller in themeToggle - added animation to dropdown menu, language menu, and search-bar

--- a/src/Layouts/Layouts.css
+++ b/src/Layouts/Layouts.css
@@ -73,7 +73,7 @@
 .content {
   width: 1160px;
   margin: 0 auto;
-  padding: 0 48px;
+  padding: 26px 48px;
   z-index: 12;
   position: relative;
   margin: 0 auto;
